--- a/QtiPackageConverter.csproj
+++ b/QtiPackageConverter.csproj
@@ -57,6 +57,9 @@
     <None Update="Xsds\Schemas.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Xsds\schema_qti21.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Xsds\schema_qti30.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
