--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ConvertOrValidate": {
       "commandName": "Project",
-      "commandLineArgs": "C:\\TMP\\Nieuwe-toets.zip 30  --validate"
+      "commandLineArgs": "C:\\TMP\\test\\domein_A.zip 21"
     }
   }
 }
